--- a/QLPMT/templates/layout/base.html
+++ b/QLPMT/templates/layout/base.html
@@ -11,17 +11,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='js/cart.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/style.js') }}"></script>
+
 </head>
 <body>
-    {% block header %}
-        {% include 'layout/header.html' %}
-    {% endblock %}
-    <div class="container">
+{% block header %}
+{% include 'layout/header.html' %}
+{% endblock %}
+<div class="container">
     {% block content required %}{% endblock %}
-    </div>
-    {% block footer %}
-        {% include 'layout/footer.html' %}
-    {% endblock %}
+</div>
+{% block footer %}
+{% include 'layout/footer.html' %}
+{% endblock %}
 </body>
 </html>
