--- a/QLPMT/templates/payment_bill.html
+++ b/QLPMT/templates/payment_bill.html
@@ -1,33 +1,29 @@
 {% extends 'layout/base.html' %}
 
 {% block content %}
-<h1>Hóa đơn thanh toán</h1>
-<div class="container">
-  <table class="table">
-    <tbody>
-      <tr>
-        <td>Họ tên</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="container" style="margin:30px">
+    <table class="table table-bordered">
+        <thead>
+        <tr>
+            <th colspan="2"><h1 style="text-align:center">Hóa đơn thanh toán</h1></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Họ tên: {{ten}}</td>
+            <td>Ngày khám: {{ngaykham}}</td>
+        </tr>
+        <tr>
+            <td>Tiền khám: {{"{:,}".format(tongtienkham)}} VNĐ</td>
+            <td>Tiền thuốc: {{"{:,}".format(tienthuoc)}} VNĐ</td>
+        </tr>
+        <tr>
+            <td colspan="2">Tổng tiền: {{"{:,}".format(tongtienkham+tienthuoc)}} VNĐ</td>
+        </tr>
+        </tr>
+        </tbody>
+    </table>
 </div>
-{% for p in phieu %}
-    <tr>
-        <td>{{ p.id }}</td>
-    </tr>
-    {% endfor %}
 
 
 {% endblock %}
