update admin and payment_bill

--- a/QLPMT/templates/layout/header.html
+++ b/QLPMT/templates/layout/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">QUẢN LÝ PHÒNG MẠCH TƯ</a>
+        <a class="navbar-brand" href="/">QUẢN LÝ PHÒNG MẠCH TƯ</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="/medical_report">Lập phiếu khám bệnh</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/get_id">Lập hóa đơn</a>
+                    <a class="nav-link" href="/payment_bill">Lập hóa đơn</a>
                 </li>
                                 {% endif %}
 
