--- a/QLPMT/templates/payment_bill.html
+++ b/QLPMT/templates/payment_bill.html
@@ -11,7 +11,8 @@
 
 
     <div>
-        <input type="submit" value="Xác nhận" class="btn btn-danger"/>
+        <input type="reset" value="Hủy" class="btn btn-danger"/>
+        <input type="submit" value="Xác nhận" class="btn btn-success"/>
     </div>
 </form>
 <p class="text-danger">{{err_msg}}</p>
