--- a/QLPMT/templates/admin/stats.html
+++ b/QLPMT/templates/admin/stats.html
@@ -2,4 +2,58 @@
 
 {% block body %}
 <h1 class="text-center text-danger">THỐNG KÊ BÁO CÁO</h1>
+
+<div class="row">
+    <div class="col-md-5 col-sm-12">
+        <form action="">
+            <label for="month" class="form-label">Nhập vào tháng: </label>
+        <input type="text" class="form-control" id="month" placeholder="Nhập tháng" name="month">
+        <div style="margin: 20px">
+            <input type="submit" value="Thống kê" class="btn btn-info" />
+        </div>
+        </form>
+        <table class="table">
+            <tr>
+                <th>Stt</th>
+                <th>Ngày</th>
+                <th>Số bệnh nhân</th>
+                <th>Doanh thu</th>
+                <th>Tỉ lệ</th>
+            </tr>
+            {% for s in stats %}
+
+            <tr>
+                <td class="number"></td>
+                <td>{{ s[0].strftime("%d/%m/%Y") }}</td>
+                <td>{{ s[1] }}</td>
+                <td>{{ s[2] }}</td>
+                <td>{{ s[3] }}</td>
+            </tr>
+            {% endfor %}
+
+
+        </table>
+    </div>
+    <div class="col-md-7 col-sm-12">
+
+        <canvas id="cateChart"></canvas>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{{ url_for('static', filename='js/my-chart.js') }}"></script>
+<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet"/>
+
+<script>
+    let labels = []
+    let data = []
+    {% for s in stats %}
+    labels.push('{{ s[1] }}')
+    data.push({{ s[2] }})
+    {% endfor %}
+
+    window.onload = function() {
+        drawRevenueChart(labels, data)
+    }
+</script>
 {% endblock %}
