--- a/QLPMT/templates/layout/header.html
+++ b/QLPMT/templates/layout/header.html
@@ -19,7 +19,7 @@
                 </li>
                 {% elif current_user.user_role.name == 'DOCTOR' %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/medical_report">Lập phiếu khám bệnh</a>
+                    <a class="nav-link" href="/medical-report">Lập phiếu khám bệnh</a>
                 </li>
                 {% elif current_user.user_role.name == 'CASHIER' %}
                 <li class="nav-item">
