--- a/QLPMT/templates/medical_report.html
+++ b/QLPMT/templates/medical_report.html
@@ -1,9 +1,273 @@
 {% extends 'layout/base.html' %}
-
 {% block content %}
-{% if current_user.is_authenticated %}
-<h1 class="text-danger"></h1>
+<h1 xmlns="http://www.w3.org/1999/html"></h1>
+<h1 class="fs-2">PHIẾU KHÁM BỆNH</h1>
+<!--patient info and meds info-->
+<div class="row">
+<!--    patient info-->
+    <div class="col-4 border-right patient_info" id="patient_info">
+                        <p class="text-primary fs-5">Thông tin bệnh nhân </p>
+                        <div class="form-floating mb-3 mt-3">
+                            <input type="date" class="form-control" required id="medicalDate" name="medicalDate"
+                            {% if session['med_report_save'] %}
+                                    value="{{ session['med_report_save'].report_date}}"
+                                    {% endif %}>
+                            <label for="medicalDate" class="required-field">Ngày khám</label>
+                        </div>
 
-{% endif %}
+                        <div class="form-floating mb-3 mt-3">
+                            <input type="text" class="form-control" required id="patientID" placeholder="Nhập mã bệnh nhân"  name="patientID"
+                                    {% if session['med_report_save'] %}
+                                        value="{{ session['med_report_save'].patient_id}}"
+                                    {% endif %}>
+                            <label for="patientID" class="required-field">Mã bệnh nhân</label>
+                        </div>
 
+                        <div class="form-floating mt-3 mb-3">
+                            <input type="text" class="form-control" required id="patientSymptoms" placeholder="Nhập triệu chứng" name="patientSymptoms"
+                                   {% if session['med_report_save'] %}
+                                        value="{{ session['med_report_save'].symptoms}}"
+                                    {% endif %}>
+
+                            <label for="patientSymptoms" class="required-field">Triệu chứng</label>
+                        </div>
+
+                        <div class="form-floating mt-3 mb-3">
+                            <input type="text" class="form-control" required id="doctorDiagnose" placeholder="Nhập dự đoán bệnh" name="doctorDiagnose"
+                                {% if session['med_report_save'] %}
+                                    value="{{ session['med_report_save'].diagnose}}"
+                                    {% endif %}>
+                            <label for="doctorDiagnose" class="required-field">Dự đoán bệnh</label>
+                        </div>
+
+                        <div style="margin-bottom: 10px" id="notIncludedMedDiv">
+
+                            <input class="form-check-input from-control" type="checkbox" onclick="checkBoxValue()"
+                                   id="notIncludedMed" name="notIncludedMed"
+                                   {% if session['med_report_save'] %}
+                                   {% if session['med_report_save'].not_included_med == '1' %}
+                                   {{"checked"}} value = '1'
+                                   {% endif %}
+                                    {% else %} value = '0'
+                                   {% endif %}
+                            <label class="form-check-label"> Không kê khai thuốc</label>
+                        </div>
+
+                         <input type="button" onclick="addMedToReport(patient_info)" value="Lưu" class="btn btn-outline-primary"/>
+                         <input type="button" onclick="showPatientMedicalReport()" value="Xem" class="btn btn-outline-primary "/>
+                         <input type="button" onclick="resetValueMedReport(patient_info)" id="clear_patient_content" value="Hủy" class="btn btn-outline-danger "/>
+
+                    </div>
+<!--    medical info-->
+    <div class="col-4 medical_info" id="medical_info">
+                        <p class="text-primary fs-5">Thông tin thuốc </p>
+                         <div class="form-floating mb-3 mt-3">
+                             <input type="text" class="form-control" required id="medicineType" placeholder="Nhập tên loại thuốc"
+                                    name="medicineType" list="medicineTypes" onfocusout="loadMedNameByType()"
+                                    {% if session['med_report_save'] %}
+                                         {% if session['med_report_save'].not_included_med == '1' %}
+                                            {{"disabled"}} value=''
+                                         {% else %}
+                                            value="{{ session['med_report_save'].med_type}}"
+                                         {% endif %}
+                                    {% endif %}
+                             >
+                             <label for="medicineType" class="required-field">Tên loại thuốc</label>
+                             <datalist id="medicineTypes">
+                                 {% for t in med_type %}
+                                 <option value="{{ t.TenLoaiThuoc }}">
+                                     {% endfor %}
+                             </datalist>
+                         </div>
+
+                         <div class="form-floating mb-3 mt-3">
+                             <input type="text" class="form-control" required id="medicineName" placeholder="Nhập tên thuốc"
+                                    name="medicineName" list="medicineNames"
+                                    {% if session['med_report_save'] %}
+                                         {% if session['med_report_save'].not_included_med == '1' %}
+                                            {{"disabled"}} value=''
+                                         {% else %}
+                                            value="{{ session['med_report_save'].med_name}}"
+                                         {% endif %}
+                                    {% endif %}
+                             >
+                             <label for="medicineName" class="required-field">Tên thuốc</label>
+                             <datalist id="medicineNames">
+                                 {% if session['med_name'] %}
+                                 {% for m in session['med_name'] %}
+                                 <option value="{{ m['med_name'] }}">
+                                 {% endfor %}
+                                 {% endif %}
+                             </datalist>
+                         </div>
+
+                         <div class="form-floating mt-3 mb-3">
+                             <input type="number" class="form-control" required id="medicineQuantity"
+                                    placeholder="Nhập số lượng thuốc"
+                                    name="medicineQuantity"
+                                    {% if session['med_report_save'] %}
+                                            {% if session['med_report_save'].not_included_med == '1' %}
+                                                   {{"disabled"}}
+                                            {% else %}
+                                                value="{{ session['med_report_save'].med_quantity}}"
+                                            {% endif %}
+                                    {% else %}
+                                        value="0"
+                                    {% endif %}
+                                     min="0" onblur="if(this.value<0)this.value=0"
+                             >
+                             <label for="medicineQuantity" class="required-field">Số lượng</label>
+                         </div>
+
+                         <div class="form-floating mt-3 mb-3">
+                             <input type="text" class="form-control" required id="medicineUsage" placeholder="Nhập cách dùng"
+                                    name="medicineUsage"
+                                    {% if session['med_report_save'] %}
+                                         {% if session['med_report_save'].not_included_med == '1' %}
+                                            {{"disabled"}} value=''
+                                         {% else %}
+                                            value="{{ session['med_report_save'].med_usage}}"
+                                        {% endif %}
+                                    {% endif %}
+                             >
+                             <label for="medicineUsage" class="required-field">Cách dùng</label>
+                         </div>
+
+                         <button type="button" onclick="addMedToReport(medical_info)" class="btn btn-outline-primary m-1"/>Thêm
+                         <button type="button" onclick="resetValueMedReport(medical_info)" class="btn btn-outline-danger "/>Hủy
+    </div>
+<!--    find meds div-->
+    <div class="col-4">
+            <h4>TRA CỨU THUỐC</h4>
+            <input class="form-control me-2" name="keyword" type="text" id ="keyword" onkeyup="searchKeyWordTable()"
+                   placeholder="Nhập mã thuốc, tên thuốc, loại thuốc...">
+            <div style="overflow-y: auto;overflow-x: auto; max-height: 250px; width: 600px">
+                <table class="table table-bordered" id="meds-table">
+                    <tr>
+                        <th>Mã thuốc</th>
+                        <th>Tên thuốc</th>
+                        <th>Loại thuốc</th>
+                        <th>Đơn vị</th>
+                        <th>Đơn giá</th>
+                        <th>Tổng số lượng</th>
+                    </tr>
+                    <tbody>
+                    {% for m, t, u in med_info %}
+                    <tr>
+                        <td>{{ m.id }}</td>
+                        <td>{{ m.TenThuoc }}</td>
+                        <td>{{ t.TenLoaiThuoc }}</td>
+                        <td>{{ u.TenDonVi }}</td>
+                        <td>{{ m.DonGia }}</td>
+                        <td>{{ m.SoLuongConLai }}</td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+</div>
+<!--medical report content-->
+<div class="row m-10" style="margin-top: 50px">
+    <!-- current medical report-->
+
+    <div class="col mt-3" id ="med_report_content">
+
+             {% if session['med_report']%}
+            <h4>BIỂU MẪU PHIẾU KHÁM BỆNH</h4>
+            <div class="container">
+                {% for m in session['med_report'].values() %}
+                {% if loop.index <= 1 %}
+                <p class="fs-5">Ngày khám: {{ m.report_date }}</p>
+                <p class="fs-5">Họ tên: {{ m.patient_name }}</p>
+                <p class="fs-5">Triệu chứng: {{ m.symptoms }}</p>
+                <p class="fs-5">Dự đoán bệnh: {{ m.diagnose }}</p>
+                {% endif %}
+                {% endfor %}
+
+                {% for m in session['med_report'].values() %}
+                {% if loop.index <=1 and m.med_name != '' and m.med_type != '' and m.med_unit != None
+                and m.med_quantity != '' and m.med_usage != ''%}
+                <table class="table table-bordered" id="report-meds-table" style="max-width:500px">
+                    <tr>
+                        <th>STT</th>
+                        <th>Thuốc</th>
+                        <th>Loại</th>
+                        <th>Đơn vị</th>
+                        <th>Số lượng</th>
+                        <th>Cách dùng</th>
+                        <th></th>
+                    </tr>
+                    {% for m in session['med_report'].values() %}
+                    <tr id="med_report{{ m.id }}">
+                        <td>{{ m.id }}</td>
+                        <td>{{ m.med_name }}</td>
+                        <td>{{ m.med_type }}</td>
+                        <td> {{ m.med_unit }}</td>
+                        <td>{{ m.med_quantity }}</td>
+                        <td>{{ m.med_usage }}</td>
+                        <td>
+                            <input type="button" onclick="deleteMed({{m.id}})" value="Xóa" class="btn btn-danger"/>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </table>
+                {% endif %}
+                {% endfor %}
+                <div>
+                    <form method="post" enctype="multipart/form-data" action="/medical-report">
+                        <input type="submit" value="Lưu" class="btn btn-outline-primary">
+                        <input type="button" onclick="clearMedReportSession()" value="Hủy" class="btn btn-outline-danger">
+                    </form>
+                </div>
+                     {% if err_msg%}
+                    <div class="alert alert-danger mt-3 fs-5" style="text-align:center;"> {{err_msg}}</div>
+                    {% endif %}
+            </div>
+             {% endif %}
+    </div>
+    <!--     all medical report of patient-->
+    <div class="col mt-3 hidden" id="med_report_list">
+        <h4> DANH SÁCH PHIẾU KHÁM </h4>
+        <div style="overflow-y: auto; max-height: 300px; max-width:500px">
+            <table class="table table-bordered">
+                <tr>
+                    <th>STT</th>
+                    <th>Tên</th>
+                    <th>Ngày khám</th>
+                    <th></th>
+                </tr>
+                <tbody id ="patient_medical_date"></tbody>
+            </table>
+        </div>
+
+        <div id="patient_medical_list_container" class="container" style="overflow-y: auto;overflow-x: hidden; max-height: 300px">
+            <div id ="patient_no_meds"></div>
+            <div id="patient_with_med"></div>
+            <div id="patient_with_many_meds"></div>
+        </div>
+
+    </div>
+</div>
+
+
+<script>
+    window.addEventListener('load', () => {
+        let date = new Date();
+        let day = date.getDate();
+        let month = date.getMonth() + 1;
+        let year = date.getFullYear();
+        if (month < 10) month = "0" + month;
+        if (day < 10) day = "0" + day;
+        var today = year + "-" + month + "-" + day;
+        document.getElementById("medicalDate").value = today;
+    });
+    $('input').on('blur change', function () {
+        saveDataAfterRefresh()
+    })
+    $('#clear_patient_content').on('click', function () {
+        if($('#notIncludedMed').is(':checked') == false)
+            $("#medical_info :input").attr("disabled", false);
+    })
+</script>
 {% endblock %}
