--- a/QLPMT/templates/admin/stats.html
+++ b/QLPMT/templates/admin/stats.html
@@ -6,7 +6,7 @@
             <label for="month" class="form-label">Nhập vào tháng: </label>
             <input style="width: 50%" type="text" class="form-control" id="month" placeholder="Nhập tháng" name="month">
             <div style="margin: 20px">
-                <input type="submit" value="Thống kê" class="btn btn-info"/>
+                <input type="submit" value="Thống kê"  class="btn btn-info"/>
             </div>
         </form>
 
@@ -52,12 +52,14 @@
             {% set item_2 = revenue[loop.index-1] %}
             <tr>
                 <td class="number"></td>
-                <td>{{ item_2[0].strftime('%d-%m-%Y') }}</td>
+                <td id="date">{{ item_2[0].strftime('%d-%m-%Y') }}</td>
                 <td>{{ item_1[1] }}</td>
-                <td>{{ "{:,}".format(item_2[3])}}</td>
-                <td>{{ "{:,.2f}".format((item_2[3] / total) * 100) }}%</td>
+                <td>{{ "{:,}".format(item_2[2])}}</td>
+                <td>{{ "{:,.2f}".format((item_2[2] / total) * 100) }}%</td>
             </tr>
             {% endfor %}
+
+
         </table>
         <h3>Tổng doanh thu: {{ "{:,}".format(total) }} VNĐ</h3>
     </div>
@@ -85,15 +87,46 @@
     let d = []
     {% for r in revenue %}
     l.push('{{ r[0].strftime('%d-%m-%Y') }}')
-    d.push({{ r[3] }})
+    d.push({{ r[2] }})
     {% endfor %}
 
-    window.onload = function() {
+
+
+function sortList() {
+  var list, i, switching, b, shouldSwitch;
+  list = document.getElementById("date");
+  switching = true;
+  /* Make a loop that will continue until
+  no switching has been done: */
+  while (switching) {
+    // Start by saying: no switching is done:
+    switching = false;
+    b = list.getElementsByTagName("LI");
+    // Loop through all list items:
+    for (i = 0; i < (b.length - 1); i++) {
+      // Start by saying there should be no switching:
+      shouldSwitch = false;
+      /* Check if the next item should
+      switch place with the current item: */
+      if (b[i].innerHTML.toLowerCase() > b[i + 1].innerHTML.toLowerCase()) {
+        /* If next item is alphabetically lower than current item,
+        mark as a switch and break the loop: */
+        shouldSwitch = true;
+        break;
+      }
+    }
+    if (shouldSwitch) {
+      /* If a switch has been marked, make the switch
+      and mark the switch as done: */
+      b[i].parentNode.insertBefore(b[i + 1], b[i]);
+      switching = true;
+    }
+  }
+}
+ window.onload = function() {
         drawMedicineChart(labels, data)
         drawRevenueChart(l, d)
+        sortList()
     }
-
-
-
 </script>
 {% endblock %}
