--- a/QLPMT/templates/medical_report.html
+++ b/QLPMT/templates/medical_report.html
@@ -9,24 +9,24 @@
                         <p class="text-primary fs-5">Thông tin bệnh nhân </p>
                         <div class="form-floating mb-3 mt-3">
                             <input type="date" class="form-control" required id="medicalDate" name="medicalDate"
-                            {% if session['med_report_save'] %}
-                                    value="{{ session['med_report_save'].report_date}}"
+                            {% if session['medical_report_save'] %}
+                                    value="{{ session['medical_report_save'].report_date}}"
                                     {% endif %}>
                             <label for="medicalDate" class="required-field">Ngày khám</label>
                         </div>
 
                         <div class="form-floating mb-3 mt-3">
                             <input type="text" class="form-control" required id="patientID" placeholder="Nhập mã bệnh nhân"  name="patientID"
-                                    {% if session['med_report_save'] %}
-                                        value="{{ session['med_report_save'].patient_id}}"
+                                    {% if session['medical_report_save'] %}
+                                        value="{{ session['medical_report_save'].patient_id}}"
                                     {% endif %}>
                             <label for="patientID" class="required-field">Mã bệnh nhân</label>
                         </div>
 
                         <div class="form-floating mt-3 mb-3">
                             <input type="text" class="form-control" required id="patientSymptoms" placeholder="Nhập triệu chứng" name="patientSymptoms"
-                                   {% if session['med_report_save'] %}
-                                        value="{{ session['med_report_save'].symptoms}}"
+                                   {% if session['medical_report_save'] %}
+                                        value="{{ session['medical_report_save'].symptoms}}"
                                     {% endif %}>
 
                             <label for="patientSymptoms" class="required-field">Triệu chứng</label>
@@ -34,28 +34,38 @@
 
                         <div class="form-floating mt-3 mb-3">
                             <input type="text" class="form-control" required id="doctorDiagnose" placeholder="Nhập dự đoán bệnh" name="doctorDiagnose"
-                                {% if session['med_report_save'] %}
-                                    value="{{ session['med_report_save'].diagnose}}"
+                                {% if session['medical_report_save'] %}
+                                    value="{{ session['medical_report_save'].diagnose}}"
                                     {% endif %}>
                             <label for="doctorDiagnose" class="required-field">Dự đoán bệnh</label>
                         </div>
 
                         <div style="margin-bottom: 10px" id="notIncludedMedDiv">
 
-                            <input class="form-check-input from-control" type="checkbox" onclick="checkBoxValue()"
+                            <input class="form-check-input from-control" type="checkbox" onclick="checkBoxValue()" onblur="saveDataAfterRefresh()"
                                    id="notIncludedMed" name="notIncludedMed"
-                                   {% if session['med_report_save'] %}
-                                   {% if session['med_report_save'].not_included_med == '1' %}
-                                   {{"checked"}} value = '1'
-                                   {% endif %}
-                                    {% else %} value = '0'
+                                   {% if session['medical_report_save'] %}
+                                        {% if session['medical_report_save'].not_included_med == '1' and session['medical_reports'] %}
+                                            {{"checked"}} {{'disabled'}} value = '1'
+                                        {% elif session['medical_report_save'].not_included_med == '1' %}
+                                            {{"checked"}} value = '1'
+                                        {% else %} value = '0'
+                                        {% endif %}
                                    {% endif %}
                             <label class="form-check-label"> Không kê khai thuốc</label>
                         </div>
 
-                         <input type="button" onclick="addMedToReport(patient_info)" value="Lưu" class="btn btn-outline-primary"/>
+                         <input type="button" id ="save_report"
+                                {%  if session['medical_reports']%}
+                                {{'disabled'}}
+                                {% endif %}
+                                onclick="addMedToReport(patient_info)" value="Lưu" class="btn btn-outline-primary"/>
                          <input type="button" onclick="showPatientMedicalReport()" value="Xem" class="btn btn-outline-primary "/>
-                         <input type="button" onclick="resetValueMedReport(patient_info)" id="clear_patient_content" value="Hủy" class="btn btn-outline-danger "/>
+                         <input type="button" id="clear_report"
+                                {%  if session['medical_reports']%}
+                                {{'disabled'}}
+                                {% endif %}
+                                onclick="resetValueMedReport(patient_info)" id="clear_patient_content" value="Hủy" class="btn btn-outline-danger "/>
 
                     </div>
 <!--    medical info-->
@@ -64,11 +74,11 @@
                          <div class="form-floating mb-3 mt-3">
                              <input type="text" class="form-control" required id="medicineType" placeholder="Nhập tên loại thuốc"
                                     name="medicineType" list="medicineTypes" onfocusout="loadMedNameByType()"
-                                    {% if session['med_report_save'] %}
-                                         {% if session['med_report_save'].not_included_med == '1' %}
+                                    {% if session['medical_report_save'] %}
+                                         {% if session['medical_report_save'].not_included_med == '1' %}
                                             {{"disabled"}} value=''
                                          {% else %}
-                                            value="{{ session['med_report_save'].med_type}}"
+                                            value="{{ session['medical_report_save'].med_type}}"
                                          {% endif %}
                                     {% endif %}
                              >
@@ -83,11 +93,11 @@
                          <div class="form-floating mb-3 mt-3">
                              <input type="text" class="form-control" required id="medicineName" placeholder="Nhập tên thuốc"
                                     name="medicineName" list="medicineNames"
-                                    {% if session['med_report_save'] %}
-                                         {% if session['med_report_save'].not_included_med == '1' %}
+                                    {% if session['medical_report_save'] %}
+                                         {% if session['medical_report_save'].not_included_med == '1' %}
                                             {{"disabled"}} value=''
                                          {% else %}
-                                            value="{{ session['med_report_save'].med_name}}"
+                                            value="{{ session['medical_report_save'].med_name}}"
                                          {% endif %}
                                     {% endif %}
                              >
@@ -105,11 +115,11 @@
                              <input type="number" class="form-control" required id="medicineQuantity"
                                     placeholder="Nhập số lượng thuốc"
                                     name="medicineQuantity"
-                                    {% if session['med_report_save'] %}
-                                            {% if session['med_report_save'].not_included_med == '1' %}
+                                    {% if session['medical_report_save'] %}
+                                            {% if session['medical_report_save'].not_included_med == '1' %}
                                                    {{"disabled"}}
                                             {% else %}
-                                                value="{{ session['med_report_save'].med_quantity}}"
+                                                value="{{ session['medical_report_save'].med_quantity}}"
                                             {% endif %}
                                     {% else %}
                                         value="0"
@@ -122,11 +132,11 @@
                          <div class="form-floating mt-3 mb-3">
                              <input type="text" class="form-control" required id="medicineUsage" placeholder="Nhập cách dùng"
                                     name="medicineUsage"
-                                    {% if session['med_report_save'] %}
-                                         {% if session['med_report_save'].not_included_med == '1' %}
+                                    {% if session['medical_report_save'] %}
+                                         {% if session['medical_report_save'].not_included_med == '1' %}
                                             {{"disabled"}} value=''
                                          {% else %}
-                                            value="{{ session['med_report_save'].med_usage}}"
+                                            value="{{ session['medical_report_save'].med_usage}}"
                                         {% endif %}
                                     {% endif %}
                              >
@@ -141,7 +151,7 @@
             <h4>TRA CỨU THUỐC</h4>
             <input class="form-control me-2" name="keyword" type="text" id ="keyword" onkeyup="searchKeyWordTable()"
                    placeholder="Nhập mã thuốc, tên thuốc, loại thuốc...">
-            <div style="overflow-y: auto;overflow-x: auto; max-height: 250px; width: 600px">
+            <div class="wrap" style="overflow-y: auto; max-height: 350px; width:600px;border-bottom: 1px solid grey">
                 <table class="table table-bordered" id="meds-table">
                     <tr>
                         <th>Mã thuốc</th>
@@ -168,27 +178,22 @@
         </div>
 </div>
 <!--medical report content-->
-<div class="row m-10" style="margin-top: 50px">
+<div class="row mt-3" style="margin-top: 50px">
     <!-- current medical report-->
 
-    <div class="col mt-3" id ="med_report_content">
+    <div class="col mt-3" id ="medical_report_content">
+    {% if session['medical_reports']%}
 
-             {% if session['med_report']%}
             <h4>BIỂU MẪU PHIẾU KHÁM BỆNH</h4>
             <div class="container">
-                {% for m in session['med_report'].values() %}
-                {% if loop.index <= 1 %}
-                <p class="fs-5">Ngày khám: {{ m.report_date }}</p>
-                <p class="fs-5">Họ tên: {{ m.patient_name }}</p>
-                <p class="fs-5">Triệu chứng: {{ m.symptoms }}</p>
-                <p class="fs-5">Dự đoán bệnh: {{ m.diagnose }}</p>
-                {% endif %}
-                {% endfor %}
 
-                {% for m in session['med_report'].values() %}
-                {% if loop.index <=1 and m.med_name != '' and m.med_type != '' and m.med_unit != None
-                and m.med_quantity != '' and m.med_usage != ''%}
-                <table class="table table-bordered" id="report-meds-table" style="max-width:500px">
+                <p class="fs-5">Ngày khám: {{ session['medical_reports'].report_date }}</p>
+                <p class="fs-5">Họ tên: {{ session['medical_reports'].patient_name }}</p>
+                <p class="fs-5">Triệu chứng: {{ session['medical_reports'].symptoms }}</p>
+                <p class="fs-5">Dự đoán bệnh: {{ session['medical_reports'].diagnose }}</p>
+
+                {% if session['medical_report_medicine'] %}
+                <table class="table table-bordered" id="report-meds-table" style="max-width:600px">
                     <tr>
                         <th>STT</th>
                         <th>Thuốc</th>
@@ -198,8 +203,8 @@
                         <th>Cách dùng</th>
                         <th></th>
                     </tr>
-                    {% for m in session['med_report'].values() %}
-                    <tr id="med_report{{ m.id }}">
+                    {% for m in session['medical_report_medicine'].values() %}
+                    <tr id="medical_report_medicine{{ m.id }}">
                         <td>{{ m.id }}</td>
                         <td>{{ m.med_name }}</td>
                         <td>{{ m.med_type }}</td>
@@ -213,40 +218,42 @@
                     {% endfor %}
                 </table>
                 {% endif %}
-                {% endfor %}
-                <div>
+                <div class="d-flex mt-2">
                     <form method="post" enctype="multipart/form-data" action="/medical-report">
                         <input type="submit" value="Lưu" class="btn btn-outline-primary">
-                        <input type="button" onclick="clearMedReportSession()" value="Hủy" class="btn btn-outline-danger">
                     </form>
+                    <input type="button" onclick="clearMedReportSession()" value="Hủy" class="btn btn-outline-danger" style="margin-left: 5px">
                 </div>
-                     {% if err_msg%}
-                    <div class="alert alert-danger mt-3 fs-5" style="text-align:center;"> {{err_msg}}</div>
-                    {% endif %}
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            {% for message in messages %}
+                    <div class="alert alert-danger mt-3 fs-5" style="text-align:center;">{{ message }}</div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
             </div>
-             {% endif %}
+    {% endif %}
     </div>
-    <!--     all medical report of patient-->
-    <div class="col mt-3 hidden" id="med_report_list">
-        <h4> DANH SÁCH PHIẾU KHÁM </h4>
-        <div style="overflow-y: auto; max-height: 300px; max-width:500px">
-            <table class="table table-bordered">
-                <tr>
-                    <th>STT</th>
-                    <th>Tên</th>
-                    <th>Ngày khám</th>
-                    <th></th>
-                </tr>
-                <tbody id ="patient_medical_date"></tbody>
-            </table>
-        </div>
 
-        <div id="patient_medical_list_container" class="container" style="overflow-y: auto;overflow-x: hidden; max-height: 300px">
+    <!--     all medical report of patient-->
+    <div class="col-6 mt-3 hidden" id="medical_report_list">
+        <h4 class="text-center"> DANH SÁCH PHIẾU KHÁM </h4>
+        <div style="overflow-y: auto; max-height: 300px">
+                <table class="table table-bordered mx-auto w-auto" style="width:1px;">
+                    <tr>
+                        <th>STT</th>
+                        <th>Tên</th>
+                        <th>Ngày khám</th>
+                        <th></th>
+                    </tr>
+                    <tbody id ="patient_medical_date"></tbody>
+
+                </table>
+        </div>
+        <div id="patient_medical_list_container" class="container mt-3 border border-secondary hidden" style="overflow-y: auto;overflow-x: hidden; max-height: 300px">
             <div id ="patient_no_meds"></div>
             <div id="patient_with_med"></div>
-            <div id="patient_with_many_meds"></div>
         </div>
-
     </div>
 </div>
 
