--- a/QLPMT/templates/layout/base.html
+++ b/QLPMT/templates/layout/base.html
@@ -13,13 +13,14 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/style.js') }}"></script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@300;400;500;700;900&family=Roboto+Slab:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@300;400;500;700;900&family=Roboto+Slab:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap'); </style>
 </head>
 <body>
 {% block header %}
 {% include 'layout/header.html' %}
 {% endblock %}
-<div class="container">
+<div class="">
     {% block content required %}{% endblock %}
 </div>
 {% block footer %}
