--- a/QLPMT/templates/layout/footer.html
+++ b/QLPMT/templates/layout/footer.html
@@ -1,4 +1,4 @@
-<div class="mt-4 p-5 bg-primary text-white rounded">
+<div class="mt-4 p-5 text-white rounded" style="background-color: #3498db">
   <h1>Quản Lý Phòng Mạch Tư</h1>
   <p>QLPMT &copy; 2022</p>
 </div>
