--- a/QLPMT/templates/layout/header.html
+++ b/QLPMT/templates/layout/header.html
@@ -13,15 +13,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/online-register">Đăng ký khám trực tuyến</a>
                 </li>
-                {% elif current_user.user_role.name == 'NURSE'%}
+                {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="/medical_list">Lập danh sách khám</a>
                 </li>
-                {% elif current_user.user_role.name == 'DOCTOR' %}
                 <li class="nav-item">
                     <a class="nav-link" href="/medical-report">Lập phiếu khám bệnh</a>
                 </li>
-                {% elif current_user.user_role.name == 'CASHIER' %}
                 <li class="nav-item">
                     <a class="nav-link" href="/payment_bill">Lập hóa đơn</a>
                 </li>
@@ -42,9 +40,6 @@
                 {% else %}
                 <li class="nav-item">
                     <a class="nav-link text-success" href="/login">Đăng nhập</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-danger" href="/register">Đăng ký</a>
                 </li>
                 {% endif %}
 
