--- a/QLPMT/templates/register.html
+++ b/QLPMT/templates/register.html
@@ -1,7 +1,8 @@
 {% extends 'layout/base.html' %}
 
 {% block content %}
-<h1 class="text-center text-success">ĐĂNG KÝ NGƯỜI DÙNG</h1>
+<div class="container">
+    <h1 class="text-center text-success">ĐĂNG KÝ NGƯỜI DÙNG</h1>
 
 {% if err_msg %}
 <div class="alert alert-danger">
@@ -57,4 +58,5 @@
         <input type="submit" value="Đăng ký" class="btn btn-danger"/>
     </div>
 </form>
+</div>
 {% endblock %}
