update last time

--- a/QLPMT/templates/medical_report.html
+++ b/QLPMT/templates/medical_report.html
@@ -241,7 +241,7 @@
             {% endif %}
             <div class="d-flex mt-2" style="margin-left: 70%">
                 <input type="button" onclick="clearMedReportSession()" value="Hủy" class="btn btn-outline-danger"
-                       style="margin-left: 5px">
+                       style="margin-right: 5px">
                 <form method="post" enctype="multipart/form-data" action="/medical-report">
                     <input type="submit" value="Lưu" class="btn btn-outline-primary">
                 </form>
