update spinner and set timeout

--- a/QLPMT/templates/medical_list.html
+++ b/QLPMT/templates/medical_list.html
@@ -91,4 +91,9 @@
     {% endif %}
 
 </div>
+<script>
+      setTimeout(function() {
+    $('#infor').fadeOut('fast');
+    }, 1000);
+</script>
 {% endblock %}
