--- a/QLPMT/templates/online_register.html
+++ b/QLPMT/templates/online_register.html
@@ -31,7 +31,7 @@
         <label for="address">Địa chỉ</label>
     </div>
     {% if err_msg %}
-    <div class="alert alert-danger">
+    <div class="alert alert-danger" id="infor">
         {{err_msg}}
     </div>
     {% endif %}
@@ -41,4 +41,9 @@
 </form>
 
 </div>
+<script>
+      setTimeout(function() {
+    $('#infor').fadeOut('fast');
+    }, 1000);
+</script>
 {% endblock %}
